Added items form view

--- a/Views/base.html
+++ b/Views/base.html
@@ -8,7 +8,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body class="center">
+<body style="text-align:center">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #D5DBDB">
         <span class="navbar-brand mb-0 h1">Restaurant</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
