--- a/Views/menu.html
+++ b/Views/menu.html
@@ -1,6 +1,6 @@
 <section class="jumbotron text-center" style="margin-bottom: 0">
     <div class="container">
         <p class="display-3 align-middle">Menu information</p>
-        <a class="btn btn-secondary" href="#" role="button">Add Item</a>
+        <a class="btn btn-secondary" href="item" role="button">Add Item</a>
     </div>
 </section>
