Added post method in the server for handling the POST requests and redirecting to a proper page

--- a/Views/item.html
+++ b/Views/item.html
@@ -39,12 +39,13 @@
     var hidden = document.getElementById("hidden");
     check.addEventListener('change', (e) => {
         if (e.target.checked) {
-            var reson = prompt("Enter reason for removing this item", "Enter here");
+            var reason = prompt("Enter reason for removing this item", "Enter here");
             if (reason) {
                 hidden.value = reason;
+                alert(hidden.value);
             }
         }
-    })
+    });
 </script>
 </body>
 </html>
