--- a/Views/item.html
+++ b/Views/item.html
@@ -1,8 +1,9 @@
-<section class="jumbotron" style="width: 40%; margin: 20px auto;">
-<form action="http://localhost:3000/item" method="POST">
+<section class="jumbotron" style="width: 40%; margin: 20px auto; border: solid #99ddff 1px;">
+<form action="http://localhost:3000/item-create" method="POST">
     <div class="form-group">
         <label for="select">Category</label>
         <select class="form-control" id="select" name="category">
+            <option selected disabled>--Choose--</option>
             <option>Main Dishes</option>
             <option>Warm Appetizers</option>
             <option>Cold Appetizers</option>
@@ -26,26 +27,22 @@
         <label for="textarea">Ingredients</label>
         <textarea class="form-control" id="textarea" rows="3" name="ingredients"></textarea>
     </div>
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="checkbox" name="removed">
-        <label class="form-check-label" for="checkbox">Remove</label>
-    </div>
-    <input type="hidden" name="reason" value="" id="hidden">
-    <button type="submit" class="btn btn-primary" style="margin-top: 20px;">Enter</button>
+    <button type="submit" class="btn btn-primary btn-lg" style="margin-top: 20px;" id="submit" onclick="return check()">Enter</button>
 </form>
 </div>
 <script>
-    var check = document.getElementById("checkbox");
-    var hidden = document.getElementById("hidden");
-    check.addEventListener('change', (e) => {
-        if (e.target.checked) {
-            var reason = prompt("Enter reason for removing this item", "Enter here");
-            if (reason) {
-                hidden.value = reason;
-                alert(hidden.value);
-            }
+    var name = document.getElementById("name");
+    var price = document.getElementById("price");
+    var weight = document.getElementById("weight");
+    var ingredients = document.getElementById("textarea");
+    var select = document.getElementById("select");
+    var check = () => {
+        if (name.value == "" || price.value == "" || weight.value == "" || ingredients.value == "" || 
+        select.options[select.selectedIndex].text == "--Choose--") {
+            alert("Enter all required information!");
+            return false;
         }
-    });
+    };
 </script>
 </body>
 </html>
