--- a/Views/menu.html
+++ b/Views/menu.html
@@ -4,3 +4,18 @@
         <a class="btn btn-secondary" href="item" role="button">Add Item</a>
     </div>
 </section>
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Category</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Weight</th>
+            <th scope="col">Ingredients</th>
+            <th scope="col">Removed</th>
+            <th scope="col">Reason</th>
+            <th scope="col">Option</th>
+            <th scope="col">Option</th>
+        </tr>
+    </thead>
+    <tbody>
