--- a/Views/base.html
+++ b/Views/base.html
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="menu">MENU</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="save">Save all orders</a>
+                </li>
             </ul>
         </div>
     </nav>
