Added date to the saved file for the orders

--- a/Views/base.html
+++ b/Views/base.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="menu">MENU</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="save">Save all orders</a>
+                    <a class="nav-link" href="save">FINISH DAY</a>
                 </li>
             </ul>
         </div>
