--- a/Views/table-order.html
+++ b/Views/table-order.html
@@ -4,5 +4,5 @@
         <button type="submit" class="btn btn-primary btn-lg" style="margin-top: 20px;" id="submit"
             onclick="return check()">Enter</button>
         <div class="form-group">
-            <label for="select">Example multiple select</label>
+            <label for="select">Select the items</label>
             <select multiple class="form-control" id="select" name="select">
