Added waiter message and updated views

--- a/Views/order.html
+++ b/Views/order.html
@@ -6,7 +6,7 @@
         var timeout = 2000;
     
         setTimeout(function () {
-            window.location = "http://localhost:3000/home";
+            window.location = "http://localhost:3000/tables";
         }, timeout);
     </script>
     </body>
