Renamed all views and routes for better consistency

--- a/Views/item-remove-get.html
+++ b/Views/item-remove-get.html
@@ -1,5 +1,5 @@
 <section class="jumbotron" style="width: 40%; margin: 20px auto; border: solid #99ddff 1px;">
-    <form action="http://localhost:3000/item-remove-post" method="POST" id="form">
+    <form action="http://localhost:3000/item-remove" method="POST" id="form">
         <div class="form-group">
             <label for="textarea">Please provide the reason for removing this item</label>
             <textarea class="form-control" id="textarea" rows="3" name="reason"></textarea>
