--- a/Views/item-remove-post.html
+++ b/Views/item-remove-post.html
@@ -1,12 +1,12 @@
 <div class="alert alert-primary" role="alert" style="width: 40%; margin:20px auto;">
-    <h1>All orders for the day were saved successfully!</h1>
+    <h1>Item removed successfully!</h1>
     <h2>Loading...</h2>
 </div>
 <script>
-    var timeout = 3000;
+    var timeout = 2000;
 
     setTimeout(function () {
-        window.location = "http://localhost:3000/home";
+        window.location = "http://localhost:3000/menu";
     }, timeout);
 </script>
 </body>
