--- a/Views/table-update-get.html
+++ b/Views/table-update-get.html
@@ -1,8 +1,8 @@
 <section class="jumbotron" style="width: 40%; margin: 20px auto; border: solid #99ddff 1px;">
-    <form action="http://localhost:3000/waiter" method="POST" id="form">
+    <form action="http://localhost:3000/table-update-waiter" method="POST" id="form">
         <input type="hidden" name="number" id="hidden" value="">
         <div class="form-group">
-            <label for="waiter">Enter waiter name</label>
+            <label for="waiter">Enter waiter's name</label>
             <input type="text" class="form-control" id="waiter" placeholder="Waiter" name="waiter">
         </div>
         <button type="submit" class="btn btn-primary btn-lg" style="margin-top: 20px;" id="submit"
