Changed all routes to REST Resorses, updated route system to sort all routes, Updated POST request to use parameter routing, Added float number for item's price, Added check to save all orders only if they are finalized

--- a/Views/base.html
+++ b/Views/base.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="tables">TABLES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="menu">MENU</a>
+                    <a class="nav-link" href="items">MENU</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="save">FINISH DAY</a>
