--- a/Views/home.html
+++ b/Views/home.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-md-6" style="background-color: #99ddff; height: 450px; padding-top: 190px">
             <p class="display-4 align-middle">View the coolest</p>
-            <p class="lead"><a class="btn btn-primary" href="menu" role="button">Menu</a></p>
+            <p class="lead"><a class="btn btn-primary" href="items" role="button">Menu</a></p>
         </div>
     </div>
 </div>
