--- a/Views/item-list.html
+++ b/Views/item-list.html
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center" style="margin-bottom: 0">
     <div class="container">
         <p class="display-3 align-middle">Menu information</p>
-        <a class="btn btn-secondary" href="item-create" role="button">Add Item</a>
+        <a class="btn btn-secondary" href="item/create" role="button">Add Item</a>
     </div>
 </section>
 <table class="table">
