--- a/Views/item-return-post.html
+++ b/Views/item-return-post.html
@@ -1,12 +1,12 @@
 <div class="alert alert-primary" role="alert" style="width: 40%; margin:20px auto;">
-    <h1>Item state updated successfully!</h1>
+    <h1>Item returned successfully!</h1>
     <h2>Loading...</h2>
 </div>
 <script>
     var timeout = 2000;
 
     setTimeout(function () {
-        window.location = "http://localhost:3000/menu";
+        window.location = "http://localhost:3000/items";
     }, timeout);
 </script>
 </body>
