--- a/Views/order-create-get.html
+++ b/Views/order-create-get.html
@@ -1,5 +1,5 @@
 <section class="jumbotron" style="width: 40%; margin: 20px auto; border: solid #99ddff 1px;">
-    <form action="http://localhost:3000/order-create" method="POST" id="form">
+    <form action="http://localhost:3000/order/create" method="POST" id="form">
         <input type="hidden" name="number" id="hidden" value="">
         <button type="submit" class="btn btn-primary btn-lg" style="margin-top: 20px;" id="submit"
             onclick="return check()">Enter</button>
