--- a/Views/item-remove-post.html
+++ b/Views/item-remove-post.html
@@ -6,7 +6,7 @@
     var timeout = 2000;
 
     setTimeout(function () {
-        window.location = "http://localhost:3000/menu";
+        window.location = "http://localhost:3000/items";
     }, timeout);
 </script>
 </body>
