--- a/Views/save-error.html
+++ b/Views/save-error.html
@@ -1,12 +1,12 @@
 <div class="alert alert-primary" role="alert" style="width: 40%; margin:20px auto;">
-    <h1>Item added successfully!</h1>
+    <h1>Please finalize all orders before saving them!</h1>
     <h2>Loading...</h2>
 </div>
 <script>
-    var timeout = 2000;
+    var timeout = 3000;
 
     setTimeout(function () {
-        window.location = "http://localhost:3000/items";
+        window.location = "http://localhost:3000/tables";
     }, timeout);
 </script>
 </body>
