--- a/Views/order-create-get.html
+++ b/Views/order-create-get.html
@@ -1,8 +1,7 @@
 <section class="jumbotron" style="width: 40%; margin: 20px auto; border: solid #99ddff 1px;">
     <form action="http://localhost:3000/order/create" method="POST" id="form">
+        <h2>Create new order</h2>
         <input type="hidden" name="number" id="hidden" value="">
-        <button type="submit" class="btn btn-primary btn-lg" style="margin-top: 20px;" id="submit"
-            onclick="return check()">Enter</button>
         <div class="form-group">
-            <label for="select">Select the items</label>
+            <label for="select">Select the items for the order</label>
             <select multiple class="form-control" id="select" name="select">
