Added error handling, updated some URLs, added more checks for accessing various resourses, updated some views, added default error page

--- a/Views/base.html
+++ b/Views/base.html
@@ -18,16 +18,16 @@
         <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="home">HOME</a>
+                    <a class="nav-link" href="//localhost:3000/home">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="tables">TABLES</a>
+                    <a class="nav-link" href="//localhost:3000/tables">TABLES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="items">MENU</a>
+                    <a class="nav-link" href="//localhost:3000/items">MENU</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="save">FINISH DAY</a>
+                    <a class="nav-link" href="//localhost:3000/save">FINISH DAY</a>
                 </li>
             </ul>
         </div>
