--- a/Views/save-error.html
+++ b/Views/save-error.html
@@ -1,4 +1,4 @@
-<div class="alert alert-primary" role="alert" style="width: 40%; margin:20px auto;">
+<div class="alert alert-warning" role="alert" style="width: 40%; margin:20px auto;">
     <h1>Please finalize all orders before saving them!</h1>
     <h2>Loading...</h2>
 </div>
