--- a/Views/save.html
+++ b/Views/save.html
@@ -1,4 +1,4 @@
-<div class="alert alert-primary" role="alert" style="width: 40%; margin:20px auto;">
+<div class="alert alert-success" role="alert" style="width: 40%; margin:20px auto;">
     <h1>All orders for the day were saved successfully!</h1>
     <h2>Loading...</h2>
 </div>
